--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
         .btn-black:active { transform: scale(0.98); opacity: 0.8; }
         input, select { border: 1px solid #e2e8f0 !important; }
         .no-scrollbar::-webkit-scrollbar { display: none; }
+        .training-pulse { animation: pulse 2s infinite; }
+        @keyframes pulse { 0% { opacity: 1; } 50% { opacity: 0.5; } 100% { opacity: 1; } }
     </style>
 </head>
 <body class="p-4 pb-24 max-w-md mx-auto">
 
-    <header class="flex justify-between items-center mb-6 bg-white p-5 rounded-3xl shadow-sm border border-gray-100">
+    <header class="flex justify-between items-center mb-4 bg-white p-5 rounded-3xl shadow-sm border border-gray-100">
         <div>
             <h1 class="text-2xl font-black text-gray-800 tracking-tighter italic">MISSION<span class="text-green-600">74</span></h1>
             <p id="feedback" class="text-[10px] font-bold text-blue-500 uppercase italic">Ready to work?</p>
@@ -27,6 +29,22 @@
             <p id="ampelStatus" class="text-[10px] uppercase font-bold tracking-widest mt-1 italic">Check...</p>
         </div>
     </header>
+
+    <div id="scheduleContainer" class="card p-4 mb-4 bg-white border border-gray-100">
+        <p class="text-[10px] font-black text-gray-400 uppercase mb-2 tracking-widest italic">Trainings-Schedule</p>
+        <div class="flex justify-between gap-1">
+            <div id="day-1" class="flex-grow py-2 rounded-xl text-center text-[10px] font-black border uppercase">Mo</div>
+            <div id="day-2" class="flex-grow py-2 rounded-xl text-center text-[10px] font-black border uppercase bg-gray-50 text-gray-300 border-transparent">Di</div>
+            <div id="day-3" class="flex-grow py-2 rounded-xl text-center text-[10px] font-black border uppercase">Mi</div>
+            <div id="day-4" class="flex-grow py-2 rounded-xl text-center text-[10px] font-black border uppercase bg-gray-50 text-gray-300 border-transparent">Do</div>
+            <div id="day-5" class="flex-grow py-2 rounded-xl text-center text-[10px] font-black border uppercase">Fr</div>
+            <div id="day-6" class="flex-grow py-2 rounded-xl text-center text-[10px] font-black border uppercase bg-gray-50 text-gray-300 border-transparent">Sa</div>
+            <div id="day-0" class="flex-grow py-2 rounded-xl text-center text-[10px] font-black border uppercase bg-gray-50 text-gray-300 border-transparent">So</div>
+        </div>
+        <div id="workoutTodayWarning" class="hidden mt-3 p-2 rounded-xl bg-purple-100 border border-purple-200 text-purple-700 text-[10px] font-black uppercase text-center training-pulse italic">
+            🔥 Heute ist Trainingstag! Gib alles.
+        </div>
+    </div>
 
     <div id="warningArea"></div>
 
@@ -65,7 +83,7 @@
                     <p class="font-bold text-gray-800 italic">Schulterdrücken: <span class="text-gray-500 font-normal">3x 10-15</span></p>
                     <p class="font-bold text-gray-800 mt-1 italic">Plank: <span class="text-gray-500 font-normal">3x 45-75 Sek</span></p>
                 </div>
-                <button onclick="logSpecial('🔥 Workout erledigt', 'TRAINING 🏋️')" class="w-full bg-purple-600 text-white py-5 rounded-2xl font-black uppercase shadow-lg mt-4">Training loggen</button>
+                <button onclick="logSpecial('🔥 Workout erledigt', 'TRAINING 🏋️')" class="w-full bg-purple-600 text-white py-5 rounded-2xl font-black uppercase shadow-lg mt-4 tracking-widest">Training loggen</button>
             </div>
         </div>
     </div>
@@ -83,7 +101,7 @@
                     <button onclick="logSpecial('Rührei mit viel Gemüse', 'Frühstück')" class="text-left w-full text-sm font-bold text-gray-800 py-1 mt-1">Rührei & Gemüse (+)</button>
                 </div>
                 <div class="p-4 bg-green-50 rounded-2xl border border-green-100">
-                    <p class="text-[10px] font-black text-green-600 uppercase mb-1">Mittagessen (Volumen)</p>
+                    <p class="text-[10px] font-black text-green-600 uppercase mb-1">Mittagessen</p>
                     <button onclick="logSpecial('Großer Salat mit Protein', 'Mittag')" class="text-left w-full text-sm font-bold text-gray-800">🥗 Großer Salat (+)</button>
                     <button onclick="logSpecial('Veggie-Bowl mit wenig Reis', 'Mittag')" class="text-left w-full text-sm font-bold text-gray-800 border-t border-green-200 mt-1 pt-1">🥣 Veggie-Bowl (+)</button>
                 </div>
@@ -106,7 +124,7 @@
                 <option value="Normal">Normal ✅</option><option value="Cheat">Cheat ❌</option>
             </select>
         </div>
-        <button onclick="saveFood()" class="w-full btn-black py-5 rounded-2xl font-black text-lg uppercase shadow-lg">Eintragen</button>
+        <button onclick="saveFood()" class="w-full btn-black py-5 rounded-2xl font-black text-lg uppercase shadow-lg tracking-widest">Eintragen</button>
     </div>
 
     <div id="foodList" class="space-y-3 mb-8"></div>
@@ -116,7 +134,6 @@
         const goodWords = ['salat', 'gemüse', 'hähnchen', 'quark', 'ei', 'fisch', 'brokkoli', 'apfel', 'beeren', 'lachs', 'tofu', 'reis', 'pfanne', 'bowl', 'mandeln', 'steak', 'pute'];
         const badWords = ['pizza', 'burger', 'bier', 'cola', 'chips', 'schokolade', 'nudeln', 'zucker', 'eis', 'döner'];
 
-        // LOKALE DATUMSERKENNUNG (yyyy-mm-dd)
         function getLocalDate() {
             const now = new Date();
             const year = now.getFullYear();
@@ -125,27 +142,44 @@
             return `${year}-${month}-${day}`;
         }
 
-        // Beim Start
         window.onload = function() {
             qs('dateInput').value = getLocalDate();
+            updateSchedule();
             updateDayDisplay();
             render();
         };
 
+        function updateSchedule() {
+            const today = new Date();
+            const dayOfWeek = today.getDay(); // 0=So, 1=Mo, 2=Di, 3=Mi, 4=Do, 5=Fr, 6=Sa
+            const trainingDays = [1, 3, 5]; // Mo, Mi, Fr
+
+            trainingDays.forEach(d => {
+                const el = qs('day-' + d);
+                el.classList.add('bg-purple-50', 'text-purple-600', 'border-purple-200');
+            });
+
+            // Aktuellen Tag hervorheben
+            const currentEl = qs('day-' + dayOfWeek);
+            currentEl.classList.add('ring-2', 'ring-black', 'ring-offset-2');
+
+            // Wenn heute Trainingstag ist
+            if (trainingDays.includes(dayOfWeek)) {
+                qs('workoutTodayWarning').classList.remove('hidden');
+            }
+        }
+
         function updateDayDisplay() {
             const inputVal = qs('dateInput').value;
             if (!inputVal) return;
-
             const parts = inputVal.split('-');
             const selectedDate = new Date(parts[0], parts[1] - 1, parts[2]);
             const now = new Date();
             now.setHours(0,0,0,0);
             selectedDate.setHours(0,0,0,0);
-
             const dayName = selectedDate.toLocaleDateString('de-DE', { weekday: 'long' });
             const options = { day: 'numeric', month: 'long', year: 'numeric' };
             const fullDate = selectedDate.toLocaleDateString('de-DE', options);
-
             if (selectedDate.getTime() === now.getTime()) {
                 qs('dayNameLabel').innerText = "Heute (" + dayName + ")";
                 qs('dayNameLabel').className = "font-black text-green-600 text-sm uppercase italic";
@@ -198,7 +232,6 @@
             const list = qs('foodList');
             list.innerHTML = '';
             let cheats = 0;
-
             data.forEach((item, index) => {
                 const isWorkout = item.meal.includes("TRAINING");
                 if (item.tag === 'Cheat') cheats++;
@@ -209,16 +242,14 @@
                 div.innerHTML = `<div><p class="text-[10px] font-bold text-gray-400 uppercase">${item.time} • ${item.meal}</p><p class="font-bold text-gray-800 text-sm">${item.food}</p></div><button onclick="remove(${index})" class="text-gray-300 text-xl px-2">&times;</button>`;
                 list.appendChild(div);
             });
-
             const score = Math.max(0, 100 - (cheats * 25));
             qs('score').innerText = score + "%";
             qs('ampelStatus').innerText = score >= 75 ? "🟢 Gut" : "🔴 Kritisch";
-            
             const hour = new Date().getHours();
             const warningArea = qs('warningArea');
             warningArea.innerHTML = '';
             if (hour >= 20 && date === getLocalDate()) {
-                warningArea.innerHTML = `<div class="bg-red-100 p-4 rounded-2xl mb-4 text-red-700 text-[11px] font-bold border border-red-200 animate-pulse text-center uppercase">⏰ Essensfenster geschlossen</div>`;
+                warningArea.innerHTML = `<div class="bg-red-100 p-4 rounded-2xl mb-4 text-red-700 text-[11px] font-bold border border-red-200 animate-pulse text-center uppercase tracking-widest">⏰ Essensfenster geschlossen</div>`;
             }
         }
 
